[package]
name = "chat_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {features = ["ws", "default", "macros"], version = "0.7.7"}
axum-macros = "0.4.2"
tokio = {features = ["full"], version = "1.40"}
serde = {features = ["derive"], version = "1.0"}
serde_json = "1.0"
log = "0.4.22"
r2d2 = "0.8.10"
r2d2_sqlite = {features = ["bundled"], version = "0.25.0"}
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
chrono = { version = "0.4.34", features = ["serde", "clock"] }
dotenv = "0.15.0"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
rusqlite = {features = ["blob"], version = "0.32.1"}
data-encoding = "2.6.0"
ring = "0.17.8"
bytes = {features = ["default"], version = "1.8.0"}
